# services

ads-sdk/: Android.mk  ad-wrapper.html  ads-sdk.js  readme.md  wrapper.js
api-daemon/: Android.mk  LICENSE
api-daemon/daemon/: config-device.toml
api-daemon/prebuilts/: config.toml
api-daemon/prebuilts/armv7-linux-androideabi/: api-daemon
metrics/: .gitlab-ci.yml  Android.mk  Cargo.toml  build.sh  config.json  config.json.sample  flash.sh  update-prebuilts.sh
metrics/docs/: create_pdf.sh  data_collection.md
metrics/prebuilts/armv7-linux-androideabi/: metrics_daemon
metrics/src/: config.rs  frame.rs  frame_messages.rs  internal_messages.rs  listener.rs  main.rs  message_broker.rs  queue.rs  socket_relay.rs  version.in
