[package]
name = "metrics_daemon"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice.desre@kaiostech.com>"]

[dependencies]
byteorder = "1.1"
chrono = "0.4"
libc = "0.2"
log = "0.4"
mio = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.error-chain]
version = "0.11"
default-features = false

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.5"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.6"

[profile.release]
lto = true
codegen-units = 1
incremental = false
